chang JNI interface

--- a/JNI/CMakeLists.txt
+++ b/JNI/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required (VERSION 2.8.9)
 
-add_library(lib_truefalse SHARED IMPORTED)
-set_target_properties(lib_truefalse PROPERTIES IMPORTED_LOCATION 
-${CMAKE_HOME_DIRECTORY}/../build_android/libtruefalse.so)
+find_package(OpenCV)
+include_directories(${OpenCV_INCLUDE_DIRS})   
+add_library( native-truefalse SHARED com_truefalse_sdk_upTrueFalse.cpp ../truefalse.cpp)
 
-add_library( native-truefalse SHARED com_truefalse_sdk_upTrueFalse.cpp)
-
-target_link_libraries(native-truefalse lib_truefalse log)
+target_link_libraries(native-truefalse  log jnigraphics ${OpenCV_LIBRARIES})
