--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ if(OpenCV_FOUND)
         target_link_libraries(truefalse ${OpenCV_LIBRARIES})
         target_link_libraries(runner truefalse)
         MESSAGE(STATUS "current platform: Linux ")
+    ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
+        target_link_libraries(truefalse ${OpenCV_LIBRARIES})
+        target_link_libraries(runner truefalse)
+        MESSAGE(STATUS "current platform: Windows ")
     ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Android")
         target_link_libraries(truefalse ${OpenCV_LIBRARIES} log)
         target_link_libraries(runner truefalse)
